--- a/website.html
+++ b/website.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DKB Anchor Security Services Ltd.</title>
-    <link rel="icon" href="https://placehold.co/40x40/001f3f/FFD700?text=Logo" type="image/x-icon">
+    <link rel="icon" href="DKB Anchor Logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -85,7 +85,7 @@
     <header class="bg-deep-blue shadow-2xl border-b border-gold/20">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#" class="flex items-center space-x-2">
-                <img src="https://placehold.co/40x40/001f3f/FFD700?text=Logo" alt="DKB Anchor Security Logo" class="h-8 w-8">
+                <img src="DKB Anchor Logo.png" alt="DKB Anchor Security Logo" class="h-8 w-8">
                 <span class="text-2xl font-bold text-white">DKB Anchor <span class="text-gold">Security</span></span>
             </a>
             <nav class="hidden md:block">
@@ -125,13 +125,13 @@
                 </p>
                 <div class="flex flex-col md:flex-row justify-center items-center space-y-4 md:space-y-0 md:space-x-4">
                     <div class="relative group w-full md:w-1/3">
-                        <img src="https://placehold.co/400x250/003366/FFD700?text=Access+Control" alt="Access Control" class="w-full rounded-lg shadow-xl border border-gold/30">
+                        <img src="Access.PNG" alt="Access Control" class="w-full rounded-lg shadow-xl border border-gold/30">
                     </div>
                     <div class="relative group w-full md:w-1/3">
-                        <img src="https://placehold.co/400x250/003366/FFD700?text=24/7+Monitoring" alt="24/7 Monitoring" class="w-full rounded-lg shadow-xl border border-gold/30">
+                        <img src="cctv.PNG" alt="24/7 Monitoring" class="w-full rounded-lg shadow-xl border border-gold/30">
                     </div>
                     <div class="relative group w-full md:w-1/3">
-                        <img src="https://placehold.co/400x250/003366/FFD700?text=Trained+Guards" alt="Trained Guards" class="w-full rounded-lg shadow-xl border border-gold/30">
+                        <img src="security.PNG" alt="Trained Guards" class="w-full rounded-lg shadow-xl border border-gold/30">
                     </div>
                 </div>
                 <div class="mt-12">
@@ -149,27 +149,27 @@
                 <h2 class="text-4xl md:text-5xl font-bold text-center text-white mb-12">Our <span class="text-gold">Services</span></h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                     <div class="card p-8 rounded-lg text-center shadow-lg">
-                        <img src="https://placehold.co/100x100/003366/FFD700?text=Guarding" alt="Manned Guarding" class="h-16 w-16 mx-auto mb-4 rounded-full">
+                        <img src="personal.PNG" alt="Manned Guarding" class="h-16 w-16 mx-auto mb-4 rounded-full">
                         <h3 class="text-2xl font-semibold text-white mb-2">Manned Guarding</h3>
                         <p class="text-white/80">Professional security personnel for on-site protection, patrols, and access control.</p>
                     </div>
                     <div class="card p-8 rounded-lg text-center shadow-lg">
-                        <img src="https://placehold.co/100x100/003366/FFD700?text=CCTV" alt="CCTV Systems" class="h-16 w-16 mx-auto mb-4 rounded-full">
+                        <img src="Surveillance.PNG" alt="CCTV Systems" class="h-16 w-16 mx-auto mb-4 rounded-full">
                         <h3 class="text-2xl font-semibold text-white mb-2">CCTV Systems</h3>
                         <p class="text-white/80">State-of-the-art surveillance systems for 24/7 monitoring and remote access.</p>
                     </div>
                     <div class="card p-8 rounded-lg text-center shadow-lg">
-                        <img src="https://placehold.co/100x100/003366/FFD700?text=Alarm" alt="Alarm Monitoring" class="h-16 w-16 mx-auto mb-4 rounded-full">
+                        <img src="Corporate.PNG" alt="Alarm Monitoring" class="h-16 w-16 mx-auto mb-4 rounded-full">
                         <h3 class="text-2xl font-semibold text-white mb-2">Alarm Monitoring</h3>
                         <p class="text-white/80">Quick response alarm systems for immediate threat detection and notification.</p>
                     </div>
                     <div class="card p-8 rounded-lg text-center shadow-lg">
-                        <img src="https://placehold.co/100x100/003366/FFD700?text=Camera" alt="CCTV Camera Installation" class="h-16 w-16 mx-auto mb-4 rounded-full">
+                        <img src="Installation.PNG" alt="CCTV Camera Installation" class="h-16 w-16 mx-auto mb-4 rounded-full">
                         <h3 class="text-2xl font-semibold text-white mb-2">CCTV Camera Installation</h3>
                         <p class="text-white/80">Professional installation of high-definition CCTV systems for optimal surveillance.</p>
                     </div>
                     <div class="card p-8 rounded-lg text-center shadow-lg border-2 border-gold">
-                        <img src="https://placehold.co/100x100/003366/FFD700?text=Risk" alt="Risk Assessment" class="h-16 w-16 mx-auto mb-4 rounded-full">
+                        <img src="Risk.PNG" alt="Risk Assessment" class="h-16 w-16 mx-auto mb-4 rounded-full">
                         <h3 class="text-2xl font-semibold text-white mb-2">Risk Assessment</h3>
                         <p class="text-white/80">Comprehensive security analysis to identify vulnerabilities and mitigate potential threats.</p>
                     </div>
@@ -398,4 +398,5 @@
         });
     </script>
 </body>
+
 </html>
