Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DKB Anchor Security Services Ltd.</title>
-    <link rel="icon" href="DKB Anchor Logo.png">
+    <link rel="DKB Anchor Logo.png" href="DKB Anchor Logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -149,7 +149,7 @@
                 <h2 class="text-4xl md:text-5xl font-bold text-center text-white mb-12">Our <span class="text-gold">Services</span></h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
                     <div class="card p-8 rounded-lg text-center shadow-lg">
-                        <img src="personal.PNG" alt="Manned Guarding" class="h-16 w-16 mx-auto mb-4 rounded-full">
+                        <img src="Personal.PNG" alt="Manned Guarding" class="h-16 w-16 mx-auto mb-4 rounded-full">
                         <h3 class="text-2xl font-semibold text-white mb-2">Manned Guarding</h3>
                         <p class="text-white/80">Professional security personnel for on-site protection, patrols, and access control.</p>
                     </div>
@@ -212,7 +212,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 max-w-7xl mx-auto">
                         <!-- David Kwame Blessings -->
                         <div class="card bg-deep-blue p-6 rounded-lg text-center shadow-lg border-gold">
-                            <img src="https://placehold.co/150x150/003366/FFD700?text=DKB" alt="David Kwame Blessings" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
+                            <img src="David.png" alt="David Kwame Blessings" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
                             <h4 class="text-xl font-semibold text-white mb-1">David Kwame Blessings</h4>
                             <p class="text-sm text-gold">Chairman & CEO</p>
                             <p class="text-white/70 text-xs mt-2 italic">Visionary leader anchoring our strategy for growth and excellence.</p>
@@ -226,14 +226,14 @@
                         </div>
                         <!-- Evelyn Awash -->
                         <div class="card bg-deep-blue p-6 rounded-lg text-center shadow-lg border-gold">
-                            <img src="https://placehold.co/150x150/003366/FFD700?text=Evelyn" alt="Evelyn Awash" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
+                            <img src="Evelyn.jpeg" alt="Evelyn Awash" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
                             <h4 class="text-xl font-semibold text-white mb-1">Evelyn Awash</h4>
                             <p class="text-sm text-gold">Secretary</p>
                             <p class="text-white/70 text-xs mt-2 italic">Managing corporate governance and executive records.</p>
                         </div>
                         <!-- Rejoice Mawunyo Tublu -->
                         <div class="card bg-deep-blue p-6 rounded-lg text-center shadow-lg border-gold">
-                            <img src="https://placehold.co/150x150/003366/FFD700?text=Rejoice" alt="Rejoice Mawunyo Tublu" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
+                            <img src="Rejoice.jpeg" alt="Rejoice Mawunyo Tublu" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
                             <h4 class="text-xl font-semibold text-white mb-1">Rejoice Mawunyo Tublu</h4>
                             <p class="text-sm text-gold">Human Resource Manager</p>
                             <p class="text-white/70 text-xs mt-2 italic">Overseeing personnel development and employee welfare.</p>
@@ -400,3 +400,4 @@
 </body>
 
 </html>
+
