--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
                      <!-- New Service 6: Electric Fencing -->
                     <div class="card p-8 rounded-lg text-center shadow-lg border-2 border-gold">
-                        <img src="Fence" alt="Electric Fencing" class="h-16 w-16 mx-auto mb-4 rounded-full">
+                        <img src="Fence.PNG" alt="Electric Fencing" class="h-16 w-16 mx-auto mb-4 rounded-full">
                         <h3 class="text-2xl font-semibold text-white mb-2">Electric Fencing</h3>
                         <p class="text-white/80">High-tension perimeter security systems with automated triggers and alarm integration.</p>
                     </div>
@@ -406,5 +406,6 @@
 </body>
 
 </html>
+
 
 
