--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="container mx-auto px-6">
                 <div class="flex flex-col lg:flex-row items-center space-y-10 lg:space-y-0 lg:space-x-12">
                     <div class="lg:w-1/2">
-                        <img src="https://placehold.co/600x400/001f3f/FFD700?text=DKB+Anchor+Security" alt="About Us" class="rounded-lg shadow-2xl border-4 border-gold">
+                        <img src="Office.png" alt="About Us" class="rounded-lg shadow-2xl border-4 border-gold">
                     </div>
                     <div class="lg:w-1/2">
                         <h2 class="text-4xl md:text-5xl font-bold text-deep-blue mb-6 underline decoration-gold decoration-4 underline-offset-8">About Our Company</h2>
@@ -406,6 +406,7 @@
 </body>
 
 </html>
+
 
 
 
