--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DKB Anchor Security Services Ltd.</title>
-    <link rel="DKB Anchor Logo.png" href="DKB Anchor Logo.png">
+    <link rel="icon" href="DKB Anchor Logo.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -406,6 +406,7 @@
 </body>
 
 </html>
+
 
 
 
