--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
                         <div class="card bg-deep-blue p-6 rounded-lg text-center shadow-lg border-gold">
                             <img src="Evelyn.jpeg" alt="Evelyn Awash" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
                             <h4 class="text-xl font-semibold text-white mb-1">Evelyn Awash</h4>
-                            <p class="text-sm text-gold">Secretary</p>
-                            <p class="text-white/70 text-xs mt-2 italic">Managing corporate governance and executive records.</p>
+                            <p class="text-sm text-gold">Marketing Manager</p>
+                            <p class="text-white/70 text-xs mt-2 italic">Driving growth through strategic marketing and brand development.</p>
                         </div>
                         <!-- Rejoice Mawunyo Tublu -->
                         <div class="card bg-deep-blue p-6 rounded-lg text-center shadow-lg border-gold">
@@ -259,6 +259,13 @@
                             <h4 class="text-xl font-semibold text-white mb-1">Faustina Papunaa</h4>
                             <p class="text-sm text-gold">Safety Manager</p>
                             <p class="text-white/70 text-xs mt-2 italic">Implementing safety standards for an accident-free environment.</p>
+                        </div>
+                         <!-- Bernice Afrima Nimarko -->
+                        <div class="card bg-deep-blue p-6 rounded-lg text-center shadow-lg border-gold">
+                            <img src="Bernice.jpeg" alt="Bernice Afrima Nimarko" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
+                            <h4 class="text-xl font-semibold text-white mb-1">Bernice Afrima Nimarko</h4>
+                            <p class="text-sm text-gold">Secretary</p>
+                            <p class="text-white/70 text-xs mt-2 italic">Managing corporate governance and executive records.</p>
                         </div>
                     </div>
                 </div>
@@ -406,6 +413,7 @@
 </body>
 
 </html>
+
 
 
 
