Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
                         </div>
                         <!-- Solace Tublu -->
                         <div class="card bg-deep-blue p-6 rounded-lg text-center shadow-lg border-gold text-white">
-                            <img src="https://placehold.co/150x150/003366/FFD700?text=Solace" alt="Solace Tublu" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
+                            <img src="Solace.jpeg" alt="Solace Tublu" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
                             <h4 class="text-xl font-semibold mb-1">Solace Tublu</h4>
                             <p class="text-sm text-gold">Intelligence Officer</p>
                             <p class="text-white/70 text-xs mt-2 italic">Expert in security intelligence and threat analysis.</p>
                         </div>
                         <!-- Bernice Afrima Nimarko -->
                         <div class="card bg-deep-blue p-6 rounded-lg text-center shadow-lg border-gold text-white">
-                            <img src="https://placehold.co/150x150/003366/FFD700?text=Bernice" alt="Bernice Afrima Nimarko" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
+                            <img src="Bernice.jpeg" alt="Bernice Afrima Nimarko" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
                             <h4 class="text-xl font-semibold mb-1">Bernice Afrima Nimarko</h4>
                             <p class="text-sm text-gold">Secretary</p>
                             <p class="text-white/70 text-xs mt-2 italic">Managing corporate governance and executive communications.</p>
@@ -580,3 +580,4 @@
     </script>
 </body>
 </html>
+
