Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         </div>
                         <!-- Faustina Papunaa -->
                         <div class="card bg-deep-blue p-6 rounded-lg text-center shadow-lg border-gold text-white">
-                            <img src="https://placehold.co/150x150/003366/FFD700?text=Faustina" alt="Faustina Papunaa" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
+                            <img src="Faustina.jpeg" alt="Faustina Papunaa" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
                             <h4 class="text-xl font-semibold mb-1">Faustina Papunaa</h4>
                             <p class="text-sm text-gold">Safety Manager</p>
                             <p class="text-white/70 text-xs mt-2 italic">Implementing safety standards for an accident-free environment.</p>
@@ -580,4 +580,5 @@
     </script>
 </body>
 </html>
+
 
