Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DKB Anchor Security Services Ltd.</title>
+    <title>DKB Anchor Security Services Ltd. | Integrity, Excellence, Reliability</title>
     <link rel="icon" href="DKB Anchor Logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -580,5 +580,6 @@
     </script>
 </body>
 </html>
+
 
 
