--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <header class="bg-deep-blue shadow-2xl border-b border-gold/20">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#" class="flex items-center space-x-3 group">
-                <img src="https://placehold.co/50x50/001f3f/FFD700?text=Logo" alt="DKB Anchor Security Logo" class="h-10 w-10">
+                <img src="DKB Anchor Logo.png" alt="DKB Anchor Security Logo" class="h-10 w-10">
                 <div class="flex flex-col">
                     <span class="text-xl md:text-2xl font-bold text-white leading-tight">DKB Anchor <span class="text-gold">Security</span></span>
                     <span class="text-[8px] md:text-[10px] uppercase slogan-tracking text-gold font-bold">Integrity, Excellence, Reliability</span>
@@ -583,6 +583,7 @@
     </script>
 </body>
 </html>
+
 
 
 
