Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
                         </div>
                         <!-- Foster Komladza -->
                         <div class="card bg-deep-blue p-6 rounded-lg text-center shadow-lg border-gold text-white">
-                            <img src="https://placehold.co/150x150/003366/FFD700?text=Foster" alt="Foster Komladza" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
-                            <h4 class="text-xl font-semibold mb-1">Foster Komladza</h4>
+                            <img src="Foster.jpeg" alt="Foster Komladza" class="h-28 w-28 mx-auto mb-4 rounded-full border-2 border-gold">
+                            <h4 class="text-xl font-semibold mb-1">W.O.1 Foster Komladza</h4>
                             <p class="text-sm text-gold">Operations Director</p>
                             <p class="text-white/70 text-xs mt-2 italic">Managing tactical security deployments and field ops.</p>
                         </div>
@@ -583,6 +583,7 @@
     </script>
 </body>
 </html>
+
 
 
 
